--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^7.2.1",
     "await-delay": "^1.0.0",
     "material-design-icons": "^3.0.1",
+    "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-spotify-login": "^0.9.1",
     "react-spring": "^8.0.27",
     "styled-components": "^5.0.0"
   },
